# picture_download

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install_steps.txt  main.py  main_test.py  picture_app.py  pyproject.toml  requirements.txt
picture_download/: __init__.py  main.py  picture_app.py
tests/: main_test.py  unit_tests.py
